--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <h1>simple text</h1>
+    <h2>simple text</h2>
+    <h3>simple text</h3>
 </body>
 </html>
