--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div>cleaners</div>
-    <h1>st</h1>
-    <h1>simple text</h1>
+    <h3>data usage</h3>
+    <h2>data cleaner</h2>
+    <h1>s cleaner</h1>
 </body>
 </html>
