--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <div>shit post</div>
     <div>test new logo</div>
     <div>new gradient</div>
+    <div>add arrow control</div>
 </body>
 </html>
