--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div>add arrow control</div>
     <div>preset cleaner</div>
     <div>other cleaner</div>
+    <div>optimization</div>
 
 </body>
 </html>
