added 2 more module

--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
     <div>preset cleaner</div>
     <div>other cleaner</div>
     <div>newmodules idk</div>
+    <div>etc module</div>
+    <div>shift module</div>
 </body>
 </html>
