--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <div>add arrow control</div>
     <div>preset cleaner</div>
     <div>other cleaner</div>
-    <div>optimization</div>
+    <div>show double fps</div>
+    <div>entity checker list</div>
+    <div>new optimization</div>
+
 
 </body>
 </html>
