--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     <div>add arrow control</div>
     <div>preset cleaner</div>
     <div>other cleaner</div>
-    <div>show double fps</div>
-    <div>entity checker list</div>
-    <div>new optimization</div>
+    <ul>list optmization</ul>
+     <label for="optmization"></label>
 
 
 </body>
